[package]
name = "checker"
version = "0.0.1"
description = "A Tauri App"
authors = ["Adam"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "checker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
sqlparser = "0.58.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["sync"] }
